[package]
name = "soudan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rusqlite = { version = "0.27.0", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = "0.15.0"
md5 = "0.7.0"
chrono = "0.4.19"
