[package]
name = "soudan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
rusqlite = { version = "0.27.0", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.15.0", features = ["derive"] }
md5 = "0.7.0"
chrono = { version = "0.4.19", features = ["serde"] }
